force-app/main/default/objects/Proesis_Wallet__c/Proesis_Wallet__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Proesis Wallet</label>
</CustomObject>