force-app/main/default/objects/Proesis_Wallet__c/fields/Dollar_Increment__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Increment__c</fullName>
    <defaultValue>100</defaultValue>
    <description>The interval at which donors can redeem points (In dollars, Points_To_Dollar * Dollar_Increment = The actual interval in app)</description>
    <label>Dollar Increment</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>