force-app/main/default/objects/Proesis_Wallet__c/fields/Minimum_Withdrawal__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Withdrawal__c</fullName>
    <defaultValue>2000</defaultValue>
    <description>Minimum amount of points that can be withdrawn at once.</description>
    <label>Minimum Withdrawal</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>