force-app/main/default/objects/Proesis_Wallet__c/fields/Points_to_Dollar__c.field-meta.xml
<CustomField>
    <fullName>Points_to_Dollar__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Represents how many points are needed for $1 USD</description>
    <label>Points to Dollar</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>